[project]
name = "wenyoumoniqi-backend"
version = "0.1.0"
description = "Backend service for wenyoumoniqi."
readme = "../README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.116.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
